# send_mail_mcp

./: .env.example  LICENSE  README.md  client_test.py  pyproject.toml  requirements.txt  server.py
